@@ -4858,3 +4858,5 @@
 20150526 movie.c,z80/coretest.c: add missing includes (Stuart).
 20150526 peripherals/disk/wd_fdc.c: remove return statement at end of void
          function (Stuart).
+20150526 movie.c,peripherals/{dck.c,disk/upd_fdc.c,joystick.c},rzx.c,ui/widget/{
+         options.pl,query.c}: remove unreachable breaks after returns (Stuart).
